added differt type of prices for Produit + creation of the Facture model
